[package]
name = "diesel-muslrust-example"
version = "0.1.0"
authors = ["Andrei Nesterov <ae.nesterov@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.6"
uuid = { version = "0.6", features = ["v4"] }
diesel = { version = "1.3", features = ["postgres", "uuid", "r2d2"] }

[patch.crates-io]
diesel = { git = "https://github.com/diesel-rs/diesel", rev = "59aa49b" }
diesel_derives = { git = "https://github.com/diesel-rs/diesel", rev = "59aa49b" }